Fixing secret key should only be in header
