# api/controllers/account.js
@@ -3,11 +3,12 @@ var util = require('util');
 var Account = require('../models/Account.js');
 
 function account(req, res) {
+
+    console.log("req.account",req.account);
     // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
     var accountId = req.swagger.params.accountId.value || 'no accountId given';
-    var secretKey = req.swagger.params.secretKey.value || 'no secret key given';
 
-    var query = { '_id': accountId, token: secretKey };
+    var query = { '_id': accountId, token: req.account.token };
 
     Account.findOne(query, function(err, account) {
         if (err) {
